--- a/contact.html
+++ b/contact.html
@@ -99,44 +99,16 @@
                     <a href="foodmenu.html">Menu</a>
                   </li>
                   <li>
+                    <a href="gallery-1.html">Gallery</a>
+                  </li>
+                  <li>
                     <a href="contact.html">Contact</a>
                   </li>
                   <li>
-                    <a href="blog.html">Blog</a>
+                    <a class="btn btn-primary" href="tel:+12093198189" role="button">Order Now</a>
                   </li>
-                  <li>
-                    <a href="#">Pages</a>
-                    <ul>
-                      <li>
-                        <a href="contact.html">Contact</a>
-                      </li>
-                      <li>
-                        <a href="gallery-1.html">Gallery 1</a>
-                      </li>
-                      <li>
-                        <a href="gallery-2.html">Gallery 2</a>
-                      </li>
-                      <li>
-                        <a href="shop.html">Shop</a>
-                      </li>
-                      <li>
-                        <a href="cart.html">Cart</a>
-                      </li>
-                      <li>
-                        <a href="checkout.html">Checkout</a>
-                      </li>
-
-                      <li>
-                        <a href="faq.html">FAQ</a>
-                      </li>
-                      <li>
-                        <a href="404.html">404</a>
-                      </li>
-                      <li>
-                        <a href="coming-soon.html">Coming Soon</a>
-                      </li>
-                    </ul>
-                  </li>
+                </ul>
+                </li>
                 </ul>
               </div>
               <div class="mt-icons">
