--- a/foodmenu.html
+++ b/foodmenu.html
@@ -107,44 +107,42 @@
                     <a href="foodmenu.html">Menu</a>
                   </li>
                   <li>
-                    <a href="blog.html">Blog</a>
+                    <a href="gallery-1.html">Gallery</a>
                   </li>
                   <li>
+                    <a href="contact.html">Contact</a>
+                  </li>
+                  <li>
+                    <a class="btn btn-primary" href="tel:+12093198189" role="button">Order Now</a>
+                  </li>
+
+                  <!-- <li>
                     <a href="#">Pages</a>
                     <ul>
+                      <li>
+                        <a href="index.html">Home</a>
+                      </li>
+                      <li><a href="about.html">About</a></li>
+                      <li> -->
+                  <!-- <a href="reservation.html">Reservation</a> -->
+                  <!--  </li>
+                      <li>
+                        <a href="foodmenu.html">Menu</a>
+                      </li>
+                      <li>
+                        <a href="gallery-1.html">Gallery</a>
+                      </li>
                       <li>
                         <a href="contact.html">Contact</a>
                       </li>
                       <li>
-                        <a href="gallery-1.html">Gallery 1</a>
-                      </li>
-                      <li>
-                        <a href="gallery-2.html">Gallery 2</a>
-                      </li>
-                      <li>
-                        <a href="shop.html">Shop</a>
-                      </li>
-                      <li>
-                        <a href="cart.html">Cart</a>
-                      </li>
-                      <li>
-                        <a href="checkout.html">Checkout</a>
-                      </li>
-
-                      <li>
-                        <a href="faq.html">FAQ</a>
-                      </li>
-                      <li>
-                        <a href="404.html">404</a>
-                      </li>
-                      <li>
-                        <a href="coming-soon.html">Coming Soon</a>
+                        <a class="btn btn-primary" href="tel:+12093198189" role="button">Order Now</a>
                       </li>
                     </ul>
-                  </li>
+                  </li> -->
                 </ul>
               </div>
-              <div class="mt-icons">
+              <!-- <div class="mt-icons">
                 <ul class="mti-list">
                   <li>
                     <span class="searchIcon">
@@ -171,54 +169,54 @@
                           <span class="lighter-text">Total:</span>
                           <span class="main-color-text total">$461.15</span>
                         </div>
-                      </div>
-                      <!--end shopping-cart-header -->
+                      </div> -->
+              <!--end shopping-cart-header -->
 
-                      <ul class="shopping-cart-items">
-                        <li>
-                          <img src="assets/img/food-menu/mpfood-1.jpg" alt="" />
-                          <span class="item-name">XMREDTREE</span>
+              <!--    <ul class="shopping-cart-items">
+                <li>
+                  <img src="assets/img/food-menu/mpfood-1.jpg" alt="" />
+                  <span class="item-name">XMREDTREE</span>
 
-                          <span class="item-price">$49.50</span>
-                          <span class="item-quantity">Quantity: 01</span>
-                          <span class="cartProduct-remove">
-                            <i class="fa fa-times" aria-hidden="true"></i>
-                          </span>
-                        </li>
+                  <span class="item-price">$49.50</span>
+                  <span class="item-quantity">Quantity: 01</span>
+                  <span class="cartProduct-remove">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                  </span>
+                </li>
 
-                        <li>
-                          <img src="assets/img/food-menu/mpfood-2.jpg" alt="" />
-                          <span class="item-name">XMWHREIN</span>
+                <li>
+                  <img src="assets/img/food-menu/mpfood-2.jpg" alt="" />
+                  <span class="item-name">XMWHREIN</span>
 
-                          <span class="item-price">$34.06</span>
-                          <span class="item-quantity">Quantity: 10</span>
-                          <span class="cartProduct-remove">
-                            <i class="fa fa-times" aria-hidden="true"></i>
-                          </span>
-                        </li>
+                  <span class="item-price">$34.06</span>
+                  <span class="item-quantity">Quantity: 10</span>
+                  <span class="cartProduct-remove">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                  </span>
+                </li>
 
-                        <li>
-                          <img src="assets/img/food-menu/mpfood-3.jpg" alt="" />
-                          <span class="item-name">XMJBRR</span>
+                <li>
+                  <img src="assets/img/food-menu/mpfood-3.jpg" alt="" />
+                  <span class="item-name">XMJBRR</span>
 
-                          <span class="item-price">$14.21</span>
-                          <span class="item-quantity">Quantity: 5</span>
-                          <span class="cartProduct-remove">
-                            <i class="fa fa-times" aria-hidden="true"></i>
-                          </span>
-                        </li>
-                      </ul>
+                  <span class="item-price">$14.21</span>
+                  <span class="item-quantity">Quantity: 5</span>
+                  <span class="cartProduct-remove">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                  </span>
+                </li>
+              </ul>
 
-                      <a href="#" class="button">Checkout</a>
-                    </div>
-                    <!--end shopping-cart -->
-                  </li>
-                </ul>
-              </div>
+              <a href="#" class="button">Checkout</a>
+            </div> -->
+              <!--end shopping-cart -->
+              </li>
+              </ul>
             </div>
           </div>
         </div>
       </div>
+    </div>
     </div>
   </header>
   <!-- /Header Area -->
