--- a/gallery-1.html
+++ b/gallery-1.html
@@ -86,12 +86,10 @@
                   <span class="dfoodyMenu-btn-icon"></span>
                 </label>
                 <ul id="dfoodyMenu" class="sm sm-simple dfoody-menu">
+
+                  <!-- <a href="reservation.html">Reservation</a> -->
                   <li>
                     <a href="index.html">Home</a>
-                    <ul>
-                      <li><a href="index.html">Home-1</a></li>
-                      <li><a href="index-2.html">Home-2</a></li>
-                    </ul>
                   </li>
                   <li><a href="about.html">About</a></li>
                   <li>
@@ -101,55 +99,18 @@
                     <a href="foodmenu.html">Menu</a>
                   </li>
                   <li>
-                    <a href="blog.html">Blog</a>
-                    <ul>
-                      <li>
-                        <a href="blog.html">Blog</a>
-                      </li>
-                      <li>
-                        <a href="blog-2.html">Blog 2</a>
-                      </li>
-                      <li>
-                        <a href="blog-details.html">Blog Single</a>
-                      </li>
-                    </ul>
+                    <a href="gallery-1.html">Gallery</a>
                   </li>
                   <li>
-                    <a href="#">Pages</a>
-                    <ul>
-                      <li>
-                        <a href="contact.html">Contact</a>
-                      </li>
-                      <li>
-                        <a href="gallery-1.html">Gallery 1</a>
-                      </li>
-                      <li>
-                        <a href="gallery-2.html">Gallery 2</a>
-                      </li>
-                      <li>
-                        <a href="shop.html">Shop</a>
-                      </li>
-                      <li>
-                        <a href="cart.html">Cart</a>
-                      </li>
-                      <li>
-                        <a href="checkout.html">Checkout</a>
-                      </li>
-
-                      <li>
-                        <a href="faq.html">FAQ</a>
-                      </li>
-                      <li>
-                        <a href="404.html">404</a>
-                      </li>
-                      <li>
-                        <a href="coming-soon.html">Coming Soon</a>
-                      </li>
-                    </ul>
+                    <a href="contact.html">Contact</a>
                   </li>
+                  <li>
+                    <a class="btn btn-primary" href="tel:+12093198189" role="button">Order Now</a>
+                  </li>
+
                 </ul>
               </div>
-              <div class="mt-icons">
+              <!-- <div class="mt-icons">
                 <ul class="mti-list">
                   <li>
                     <span class="searchIcon">
@@ -176,10 +137,10 @@
                           <span class="lighter-text">Total:</span>
                           <span class="main-color-text total">$461.15</span>
                         </div>
-                      </div>
-                      <!--end shopping-cart-header -->
+                      </div> -->
+              <!--end shopping-cart-header -->
 
-                      <ul class="shopping-cart-items">
+              <!-- <ul class="shopping-cart-items">
                         <li>
                           <img src="assets/img/food-menu/mpfood-1.jpg" alt="" />
                           <span class="item-name">XMREDTREE</span>
@@ -215,15 +176,15 @@
                       </ul>
 
                       <a href="#" class="button">Checkout</a>
-                    </div>
-                    <!--end shopping-cart -->
-                  </li>
-                </ul>
-              </div>
+                    </div> -->
+              <!--end shopping-cart -->
+              </li>
+              </ul>
             </div>
           </div>
         </div>
       </div>
+    </div>
     </div>
   </header>
   <!-- /Header Area -->
