--- a/gallery-1.html
+++ b/gallery-1.html
@@ -77,7 +77,7 @@
           <div class="col-9 col-md-9">
             <div class="gm-box">
               <div class="gmb-contact">
-                <p>Call Now: <a href="tel:8883875000">888.387.8888</a></p>
+                <p>Call Now: <a href="tel:8883875000">+1(209) 319-8189</a></p>
               </div>
               <div class="dfoody-menu-wrapper">
                 <!-- Mobile menu toggle button (hamburger/x icon) -->
@@ -86,7 +86,6 @@
                   <span class="dfoodyMenu-btn-icon"></span>
                 </label>
                 <ul id="dfoodyMenu" class="sm sm-simple dfoody-menu">
-
                   <!-- <a href="reservation.html">Reservation</a> -->
                   <li>
                     <a href="index.html">Home</a>
