--- a/gallery-1.html
+++ b/gallery-1.html
@@ -77,7 +77,7 @@
           <div class="col-9 col-md-9">
             <div class="gm-box">
               <div class="gmb-contact">
-                <p>Call Now: <a href="tel:8883875000">+1(209) 319-8189</a></p>
+                <p>Call Now: <a href="tel:+12093198189">+1(209) 319-8189</a></p>
               </div>
               <div class="dfoody-menu-wrapper">
                 <!-- Mobile menu toggle button (hamburger/x icon) -->
