--- a/checkout.html
+++ b/checkout.html
@@ -77,7 +77,7 @@
           <div class="col-9 col-md-9">
             <div class="gm-box">
               <div class="gmb-contact">
-                <p>Call Now: <a href="tel:8883875000">888.387.8888</a></p>
+                <p>Call Now: <a href="tel:+12093198189">888.387.8888</a></p>
               </div>
               <div class="dfoody-menu-wrapper">
                 <!-- Mobile menu toggle button (hamburger/x icon) -->
