--- a/index-3.html
+++ b/index-3.html
@@ -77,7 +77,7 @@
           </div>
           <div class="col-md-6">
             <div class="gth-content gth-right">
-              <p>Call Now: <a href="tel:8883875000">888.387.8888</a></p>
+              <p>Call Now: <a href="tel:+12093198189">888.387.8888</a></p>
             </div>
           </div>
         </div>
