--- a/foodmenu.html
+++ b/foodmenu.html
@@ -943,7 +943,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/onion-uthappam.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Onion uthappam</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -983,7 +983,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/idly.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Idly (3 pcs)</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -1023,7 +1023,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/Onion-Dosa.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Onion dosa</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -1043,7 +1043,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/Plain dosa.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Plain dosa</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -1123,7 +1123,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/set dosa.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Set dosa (2)</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -1203,7 +1203,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/Sambhar.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>SambarVada</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
