--- a/foodmenu.html
+++ b/foodmenu.html
@@ -1413,7 +1413,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/butternaan.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Butter naan</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -1433,7 +1433,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/roti.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Chapathi (2 pcs)</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -1453,7 +1453,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/puricurry.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Puri curry (2 pcs)</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -1473,7 +1473,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/chana.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Channa bhatura</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -1493,7 +1493,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/rasmalai.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Rasamalai (4 Pcs)</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -1513,7 +1513,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/GulabJamun.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Gulab jamun (4 pcs)</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -1542,7 +1542,7 @@
                           <li class="nveg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/butterchicken.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Butter Chicken</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -1562,7 +1562,7 @@
                           <li class="nveg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/gongura chicken.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Gongura Chicken Curry</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -1582,7 +1582,7 @@
                           <li class="nveg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/chickencurry.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Chicken Curry</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -1602,7 +1602,7 @@
                           <li class="nveg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/chickenchettinad.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Chicken Chettinadu</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -1622,7 +1622,7 @@
                           <li class="nveg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/goatcurry.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Goat Curry</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -1662,7 +1662,7 @@
                           <li class="nveg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/gonguragoat.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Gongura Goat</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -1682,7 +1682,7 @@
                           <li class="nveg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/goatchettinad.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Goat Chettinadu</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -1702,7 +1702,7 @@
                           <li class="nveg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/guttivankaya.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Guthi Vankaya (Eggplant Masala)</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -1722,7 +1722,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/paneer-butter-masala.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Paneer Butter Masala</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -1742,7 +1742,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/Dal-Tadka.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Dal Thadka</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
