--- a/foodmenu.html
+++ b/foodmenu.html
@@ -427,7 +427,8 @@
                                 <img src="assets/img/food-menu/StuffedMirchi.JPG" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Stuffed Mirchi</h4>
-                                  <!--  <p>Bread recipes for snacks or breakfast. </p> -->
+                                  <p>Stuffed chilli bajji is a famous street of Andhra and called locally as Cut Mirchi
+                                  </p>
                                 </div>
                               </div>
                               <div class="dft-row-align-right">
