--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     <div>
       <div id="slideshow">
         <div>
-          <img class="himg" src="./assets/slides/6a.png" />
+          <img class="himg" src="./assets/slides/sixsai.jpg" />
         </div>
         <div>
           <img class="himg" src="./assets/slides/2a.png" />
