--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     #slideshow-mobile {
       display: none;
     }
-    
+
 
     @media (min-width: 320px) and (max-width: 767px) {
       #slideshow {
@@ -94,25 +94,25 @@
       }
 
       #slideshow-mobile {
-      position: relative;
-      height: 100vh;
-      width: 100%;
-      display: block;
-    }
+        position: relative;
+        height: 100vh;
+        width: 100%;
+        display: block;
+      }
 
-    .himg {
-      display: block;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      z-index: 0;
-    }
+      .himg {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: 0;
+      }
 
-    #slideshow-mobile>div {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-    }
+      #slideshow-mobile>div {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+      }
     }
   </style>
 </head>
@@ -311,22 +311,22 @@
       </div>
       <div id="slideshow-mobile">
         <div>
-          <img class="himg" src="./assets/slides/i1.jpeg" />
+          <img class="himg" src="./assets/slides/t1.jfif" />
         </div>
         <div>
-          <img class="himg" src="./assets/slides/i2.jpeg" />
+          <img class="himg" src="./assets/slides/t2.jfif" />
         </div>
         <div>
-          <img class="himg" src="./assets/slides/i3.jpeg" />
+          <img class="himg" src="./assets/slides/t3.jfif" />
         </div>
         <div>
-          <img class="himg" src="./assets/slides/i4.jpeg" />
+          <img class="himg" src="./assets/slides/t4.jfif" />
         </div>
         <div>
-          <img class="himg" src="./assets/slides/i5.jpeg" />
+          <img class="himg" src="./assets/slides/t5.jfif" />
         </div>
         <div>
-          <img class="himg" src="./assets/slides/i6.jpeg" />
+          <img class="himg" src="./assets/slides/t6.jfif" />
         </div>
       </div>
       <!-- <div id="slideshow">
