--- a/index.html
+++ b/index.html
@@ -310,22 +310,22 @@
       </div>
       <div id="slideshow-mobile">
         <div>
-          <img class="himg" src="./assets/slides/t1.jfif" />
+          <img class="himg" src="./assets/slides/chicken  1.jpg" />
         </div>
         <div>
-          <img class="himg" src="./assets/slides/t2.jfif" />
+          <img class="himg" src="./assets/slides/chicken biryani  .jpg" />
         </div>
         <div>
-          <img class="himg" src="./assets/slides/t3.jfif" />
+          <img class="himg" src="./assets/slides/curry  design.jpg" />
         </div>
         <div>
-          <img class="himg" src="./assets/slides/t4.jfif" />
+          <img class="himg" src="./assets/slides/dosa.jpg" />
         </div>
         <div>
-          <img class="himg" src="./assets/slides/t5.jfif" />
+          <img class="himg" src="./assets/slides/paneer.jpg" />
         </div>
         <div>
-          <img class="himg" src="./assets/slides/t6.jfif" />
+          <img class="himg" src="./assets/slides/samosa.jpg" />
         </div>
       </div>
       <!-- <div id="slideshow">
