--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       .himg {
         display: block;
         width: 100%;
-        object-fit: cover;
+        object-fit:inherit;
         z-index: 0;
       }
 
@@ -120,14 +120,14 @@
   <!-- <div id="preloader"></div> -->
 
   <!-- Header Area -->
-  <header class="header-area dfoody-header dfdV2">
-    <div class="dfoody-header-box">
+  <header  class="header-area dfoody-header dfdV2">
+    <div class="dfoody-header-box" style="padding: 0;">
       <div class="container">
         <div class="row">
           <div class="col-3 col-md-3">
             <div class="logo-wrapper">
               <a href="index.html">
-                <img src="assets/img/logo.png" alt="" width="150" />
+                <img src="assets/img/logo.png" alt="" />
               </a>
             </div>
           </div>
@@ -162,47 +162,8 @@
                   <li>
                     <a class="btn btn-primary" href="tel:+12093198189" role="button">Order Now</a>
                   </li>
-                  <!-- <li>
-                    <a href="blog.html">Blog</a>
-                  </li>-->
-
-                  <!-- <li>
-                    <a href="#">Pages</a>
-                    <ul>
-                      <li>
-                        <a href="contact.html">Contact</a>
-                      </li>
-                      <li>
-                        <a href="gallery-1.html">Gallery 1</a>
-                      </li>
-                      <li>
-                        <a href="gallery-2.html">Gallery 2</a>
-                      </li>
-                      <li>
-                        <a href="shop.html">Shop</a>
-                      </li>
-                      <li>
-                        <a href="cart.html">Cart</a>
-                      </li>
-                      <li>
-                        <a href="checkout.html">Checkout</a>
-                      </li>
-
-                      <li>
-                        <a href="faq.html">FAQ</a>
-                      </li>
-                      <li>
-                        <a href="404.html">404</a>
-                      </li>
-                      <li>
-                        <a href="coming-soon.html">Coming Soon</a>
-                      </li>
-                    </ul>
-                  </li> -->
-                  <!--  <li>
-                    <a href="login.html">Login</a>
-                  </li> -->
                 </ul>
+                
               </div>
               <!-- <div class="mt-icons">
                 <ul class="mti-list">
