--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
     }
 
     #slideshow>div {
-      position: absolute;
+      position: z-index: 0;
+      ;
       width: 100%;
       height: 100%;
     }
@@ -103,7 +104,7 @@
       .himg {
         display: block;
         width: 100%;
-        object-fit:inherit;
+        object-fit: inherit;
         z-index: 0;
       }
 
@@ -120,7 +121,7 @@
   <!-- <div id="preloader"></div> -->
 
   <!-- Header Area -->
-  <header  class="header-area dfoody-header dfdV2">
+  <header class="header-area dfoody-header dfdV2">
     <div class="dfoody-header-box" style="padding: 0;">
       <div class="container">
         <div class="row">
@@ -163,7 +164,7 @@
                     <a class="btn btn-primary" href="tel:+12093198189" role="button">Order Now</a>
                   </li>
                 </ul>
-                
+
               </div>
               <!-- <div class="mt-icons">
                 <ul class="mti-list">
