--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
     }
 
     #slideshow>div {
-      position: z-index: 0;
-      ;
+      position: absolute;
       width: 100%;
       height: 100%;
     }
