--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <div class="col-3 col-md-3">
             <div class="logo-wrapper">
               <a href="index.html">
-                <img src="assets/img/logo.png" alt="" />
+                <img src="assets/img/logo.png" alt="" width="200" />
               </a>
             </div>
           </div>
@@ -160,10 +160,9 @@
                     <a href="contact.html">Contact</a>
                   </li>
                   <li>
-                    <a class="btn btn-primary" href="tel:+12093198189" role="button">Order Now</a>
+                    <a class="btn" style="background-color: #f14668;color: white;" href="tel:+12093198189" role="button">Order Now</a>
                   </li>
                 </ul>
-                
               </div>
               <!-- <div class="mt-icons">
                 <ul class="mti-list">
