--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <a href="contact.html">Contact</a>
                   </li>
                   <li>
-                    <a class="btn" style="background-color: #f14668;color: white;" href="tel:+12093198189" role="button">Order Now</a>
+                    <a class="btn" style="background-color: #f14668;color: white;margin: 20px;" href="tel:+12093198189" role="button">Order Now</a>
                   </li>
                 </ul>
               </div>
