--- a/index.html
+++ b/index.html
@@ -144,23 +144,23 @@
                 </label>
                 <ul id="dfoodyMenu" class="sm sm-simple dfoody-menu">
                   <li>
-                    <a href="index.html">Home</a>
+                    <a style="text-align: center;" href="index.html">Home</a>
                   </li>
-                  <li><a href="about.html">About</a></li>
+                  <li><a style="text-align: center;" href="about.html">About</a></li>
                   <li>
                     <!-- <a href="reservation.html">Reservation</a> -->
                   </li>
                   <li>
-                    <a href="foodmenu.html">Menu</a>
+                    <a style="text-align: center;" href="foodmenu.html">Menu</a>
                   </li>
                   <li>
-                    <a href="gallery-1.html">Gallery</a>
+                    <a style="text-align: center;" href="gallery-1.html">Gallery</a>
                   </li>
                   <li>
-                    <a href="contact.html">Contact</a>
+                    <a style="text-align: center;" href="contact.html">Contact</a>
                   </li>
                   <li>
-                    <a class="btn" style="background-color: #f14668;color: white;margin: 20px;" href="tel:+12093198189" role="button">Order Now</a>
+                    <a class="btn" style="background-color: #f14668;color: white;margin: 0 20px;" href="tel:+12093198189" role="button">Order Now</a>
                   </li>
                 </ul>
               </div>
